# rust_sipeed_m0sense

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: run.bat  run.sh
examples/: blinky.rs  empty.rs
